[package]
name = "hackdose-sml-parser"
version = "0.5.1"
edition = "2021"
authors = ["Philipp Vollmer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/torfmaster/hackdose-sml-parser"
description = "a parser for the smart message language spoken by smart meters"

[dependencies]
byteorder = "1.4.3"
enum-iterator = "1.2.0"
lazy_static = "1.4.0"
peg = { version = "0.8.1" }
serde = { version="1.0.149", features=["derive"] }
tokio = { version="1.23.0", features=["sync", "io-util", "rt"] }
tokio-stream = { version="0.1.11", features=["sync"] }
